# gnss_lorawan_tracker

./: README.md
gnss_lorawan_tracker/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
gnss_lorawan_tracker/boards/: esp32_devkitc_wroom.conf  esp32_devkitc_wroom.overlay
gnss_lorawan_tracker/src/: breathing_light.c  breathing_light.h  gnss_manager.c  gnss_manager.h  ignition_monitor.c  ignition_monitor.h  lorawan_uart_smartmodular.c  lorawan_uart_smartmodular.h  main.c
